--- a/static/css/style.css
+++ b/static/css/style.css
@@ -8,3 +8,21 @@ body,
 html {
   height: 100%;
 }
+
+.legend {
+  padding: 8px;
+  font-family: Sanchez, serif;
+  font-size: 11px;
+  line-height: 18px;
+  color: #555;
+  border-radius: 5px;
+  background-color: white;
+  box-shadow: 0 0 15px rgba(0, 0, 0, 0.2);
+}
+.legend i {
+  width: 18px;
+  height: 18px;
+  float: left;
+  margin-right: 8px;
+  opacity: 0.7;
+}
