--- a/static/css/style.css
+++ b/static/css/style.css
@@ -26,3 +26,20 @@ html {
   margin-right: 8px;
   opacity: 0.7;
 }
+
+.leaflet-popup-content {
+  text-align: center;
+  margin-top: 10px;
+  margin-bottom: 10px;
+}
+
+.leaflet-popup-content p {
+  margin-top: 8px;
+  margin-bottom: 8px;
+  font-size: 10px;
+}
+
+.leaflet-popup-content h4 {
+  margin-top: 14px;
+  margin-bottom: 11px;
+}
